Implemented customer gRPC transport and integrated grpc-gateway
