# docs/customer.swagger.json
@@ -1,12 +1,21 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "customer.proto",
-    "version": "version not set"
+    "title": "Reservation System API",
+    "description": "go-kit gRPC-gateway Reservation System Demo Application",
+    "version": "1.0",
+    "contact": {
+      "name": "Tsvetan Dimitrov",
+      "email": "tsvetan.dimitrov23@gmail.com"
+    },
+    "license": {
+      "name": "Apache 2.0",
+      "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+    }
   },
+  "host": "localhost:8081",
   "schemes": [
-    "http",
-    "https"
+    "http"
   ],
   "consumes": [
     "application/json"
@@ -212,5 +221,9 @@
         }
       }
     }
+  },
+  "externalDocs": {
+    "description": "go-kit gRPC-gateway Reservation System Demo Application",
+    "url": "https://github.com/powerslider/go-kit-grpc-gw-reservation-system-demo"
   }
 }
